--- a/EduxSoft.Base/Views/Configuration/Index.cshtml
+++ b/EduxSoft.Base/Views/Configuration/Index.cshtml
@@ -1,3 +1,56 @@
-﻿@section title{ 
-Configuration general
+﻿@model EduxSoft.Base.ViewModels.Configuration.IndexViewModel
+@using EduxSoft.Base.Code
+@using EduxSoft.Base.Models
+@section title{ 
+Information General
 }
+
+<div class="row">
+    <div class="col-md-6">
+        @** box School*@
+        <div class="box">
+            <div class="box-header with-border">
+                <h3>Etablissement</h3>
+            </div>
+            <div class="box-body">
+                @if (ViewBag.IsEmpty)
+                {
+                    <div class="margin">
+                        <div class="btn-group">
+                            <a id="addSchoolModal" data-toggle="modal" asp-action="Create" data-target="#modal-action-base" class="btn btn-block btn-primary">Nouveau
+                                <span class="glyphicon glyphicon-plus"></span></a>
+                        </div>
+                    </div>
+
+                   <p>Veuillez parametrez votre Etablissement, une fois configurer les données ne peuvent etre changé</p> 
+                }
+                else
+                {
+            <dl class="dl-horizontal">
+                <dt>Name</dt>
+                <dd>@Model.SchoolInfo.Name</dd>
+                <dt>Primaire</dt>
+                <dd>
+                    @if (Model.SchoolInfo.IsPrimary == true)
+                    {
+
+                    }
+                </dd>
+                <dt>Secondaire</dt>
+                <dd>
+                    @if (Model.SchoolInfo.IsSecondary == true)
+                    {
+
+                    }
+                </dd>
+                <dt>Adresse</dt>
+                <dd>@Model.SchoolInfo.Address</dd>
+                <dt>Date de création</dt>
+                <dd> @Model.SchoolInfo.Created</dd>
+            </dl>
+                }
+            </div>
+        </div>
+    </div>
+</div>
+@Html.Partial("_Modal",new BootstrapModel { ID="modal-action-base",AreaLabeledId="modal-action-base-label", Size =ModalSize.Medium})
