--- a/src/EduxSoft.Student/Views/Student/Index.cshtml
+++ b/src/EduxSoft.Student/Views/Student/Index.cshtml
@@ -1,3 +1,61 @@
-﻿@section  title{ Acceuil}
+﻿@model EduxSoft.Student.ViewModels.IndexViewModel
+@section  title{ Acceuil}
 
-<h1>Acceuil eleves</h1>
+<div class="row">
+    <div class="box box-primary col-md-12">
+        <div class="box-header">
+            <h4 class="box-tile">Activités récentes</h4>
+        </div>
+        <div class="box-body">
+            <div class="table-responsive">
+                <table class="table table-bordered table-hover">
+                    <thead>
+                        <tr>
+                            <th>#</th>
+                            <th>Noms Complet</th>
+                            <th>Classe</th>
+                            <th>Tag Primaire</th>
+                            <th>Tag Secondaire</th>
+                        </tr>
+
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model.Classes)
+                        {
+                            <tr>
+                                <td></td>
+                                <td>@item.Section.Name</td>
+                                <td>@item.Grade   @item.Name"</td>
+                                <td>
+                                    @{
+                                        if (item.IsPrimary)
+                                        {
+                                            <text>OUI</text>
+                                        }
+                                        else
+                                        {
+                                            <text>NON</text>
+                                        }
+                                    }
+                                </td>
+                                <td>
+                                    @{
+                                        if (item.IsSecondary)
+                                        {
+                                            <text>OUI</text>
+                                        }
+                                        else
+                                        {
+                                            <text>NON</text>
+                                        }
+                                    }
+                                </td>
+
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
