--- a/src/EduxSoft.Student/Views/Student/ListStudent.cshtml
+++ b/src/EduxSoft.Student/Views/Student/ListStudent.cshtml
@@ -11,7 +11,7 @@
                 <div class="col-md-6">
                     <form asp-action="List" role="form" method="get">
                         <div class="form-group">
-                            <label asp-for="" class="col-sm-3 control-label">Classe</label>
+                            <label class="col-sm-3 control-label">Classe</label>
                             <div class="col-sm-6">
                                 <select class="form-control">
                                     <option value="section">Section</option>
@@ -19,7 +19,7 @@
                                 </select>
                             </div>
                             <div class="col-sm-6">
-                                <label asp-for="" class="col-sm-3 control-label">Section</label>
+                                <label  class="col-sm-3 control-label">Section</label>
 
                                 <select class="form-control">
                                     <option value="value">text</option>
